--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 4000
 DBURL = mongodb+srv://umarsyed082:QWqXeAgRitj46mhj@cluster0.1nihg4f.mongodb.net/
+MONGODB_URL_LOCAL = mongodb://localhost:27017/booksData
